--- a/editor/package.json
+++ b/editor/package.json
@@ -14,7 +14,13 @@
     "babel-plugin-import": "^1.6.3",
     "babel-runtime": "^6.9.2",
     "dva": "^2.1.0",
+    "dva-loading": "^1.0.4",
+    "immutability-helper": "^2.6.2",
+    "lodash": "^4.17.4",
+    "re-resizable": "^4.1.2",
     "react": "^15.4.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.4.0"
   },
   "devDependencies": {
