--- a/editor/package.json
+++ b/editor/package.json
@@ -13,15 +13,18 @@
     "antd": "^3.1.0",
     "babel-plugin-import": "^1.6.3",
     "babel-runtime": "^6.9.2",
+    "classnames": "^2.2.5",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
     "immutability-helper": "^2.6.2",
     "lodash": "^4.17.4",
     "re-resizable": "^4.1.2",
     "react": "^15.4.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "react-rnd": "^7.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
