--- a/editor/.roadhogrc
+++ b/editor/.roadhogrc
@@ -26,7 +26,7 @@
   ],
   "proxy": {
     "/api": {
-      "target": "http://jsonplaceholder.typicode.com/",
+      "target": "http://222.85.161.174:8081/",
       "changeOrigin": true,
       "pathRewrite": { "^/api" : "" }
     }
