--- a/editor/package.json
+++ b/editor/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
+    "echarts": "^4.0.2",
     "immutability-helper": "^2.6.2",
     "lodash": "^4.17.4",
     "re-resizable": "^4.1.2",
