--- a/editor/package.json
+++ b/editor/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.4",
     "re-resizable": "^4.1.2",
     "react": "^15.4.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
