--- a/editor/package.json
+++ b/editor/package.json
@@ -13,6 +13,7 @@
     "antd": "^3.1.0",
     "babel-plugin-import": "^1.6.3",
     "babel-runtime": "^6.9.2",
+    "brace": "^0.11.1",
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.4",
     "re-resizable": "^4.1.2",
     "react": "^15.4.0",
+    "react-ace": "^5.9.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^2.5.4",
