加入数据保存 初步完成事件处理

--- a/render/.roadhogrc
+++ b/render/.roadhogrc
@@ -1,6 +1,7 @@
 {
   "entry": "src/index.js",
-  "outputPath": "render",
+  "publicPath": ".",
+  "outputPath": "../build/render",
   "extraBabelPlugins": [
     [
       "import",
