--- a/editor/.roadhogrc
+++ b/editor/.roadhogrc
@@ -1,7 +1,7 @@
 {
   "entry": "src/index.js",
   "publicPath": ".",
-  "outputPath": "editor",
+  "outputPath": "../build/editor",
   "extraBabelPlugins": [
     [
       "import",
