--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "echarts": "^4.0.2",
     "immutability-helper": "^2.6.2",
     "lodash": "^4.17.4",
+    "moment": "^2.22.0",
     "re-resizable": "^4.1.2",
     "react": "^15.4.0",
     "react-ace": "^5.9.0",
