--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "re-resizable": "^4.1.2",
     "react": "^15.4.0",
     "react-ace": "^5.9.0",
+    "react-color": "^2.14.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^2.5.4",
