--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
     "echarts": "^4.0.2",
+    "echarts-wordcloud": "^1.1.3",
     "immutability-helper": "^2.6.2",
     "lodash": "^4.17.4",
     "moment": "^2.22.0",
